# spdlog-broken-recipe

./: CMakeLists.txt  Makefile  conanfile_not_working.txt  conanfile_working_spdlog.txt  library.cpp  library.h
